# xDAN-DeepAgent-Project

./: .gitignore  DEPLOYMENT_SUMMARY.md  Makefile  README.md  check_mcp_tools.py  compare_mcp_servers.py  diagnose_server.sh  langgraph.json  pyproject.toml  quick_test.sh  start_server.sh  test_api.py  test_auto_search_minimal.py  test_deepagent_integration.py  test_mcp_integration.py  test_search_simple.py  test_trafilatura_fix.py
docs/: AutoSearchTool集成指南-20251017.md  DeepAgents架构图与数据流转图.md  DeepAgents重构总结报告-20251017.md
examples/research/: research_agent.py
libs/deepagents-cli/: Makefile  README.md  default_agent_prompt.md  pyproject.toml
libs/deepagents-cli/deepagents_cli/: README.md  __init__.py  __main__.py  agent.py  cli.py  commands.py  config.py  execution.py  file_ops.py  input.py  main.py  token_utils.py  tools.py  ui.py
libs/deepagents-cli/tests/: test_placeholder.py
src/deepagents/: factory.py  graph.py  interrupt.py  mcp_client.py  middleware.py  prompts.py  sub_agent.py  tools.py
src/deepagents/auto_search_tool/: __init__.py  auto_search_tool.py  brightdata_client.py  firecrawl_client.py  retriever.py  search_parser.py  trafilatura_client.py
src/deepagents/backends/: __init__.py  composite.py  filesystem.py  protocol.py  state.py  store.py  utils.py
src/deepagents/middleware/: __init__.py  agent_memory.py  filesystem.py  patch_tool_calls.py  resumable_shell.py  subagents.py
src/deepagents/prompts/: README.md
src/deepagents/prompts/base/: base_agent_prompt.md
src/deepagents/prompts/system/: filesystem_system_prompt.md  task_system_prompt.md  write_todos_system_prompt.md
src/deepagents/prompts/system_tool/: edit_file_tool_description.md  list_files_tool_description.md  read_file_tool_description.md  task_tool_description.md  write_file_tool_description.md  write_todos_tool_description.md
src/deepagents/utils/: __init__.py  content_extractor.py  logger.py  pdf_parser.py  smart_content_extractor.py  tag_extractor.py  time_aware.py  type_validators.py
tests/: test_agent_memory.py  test_deepagents.py  test_middleware.py  test_search_comparison.py  utils.py
tests/backends/: test_composite_backend.py  test_filesystem_backend.py  test_state_backend.py  test_store_backend.py
tests/integration_tests/: test_deepagents.py  test_filesystem_middleware.py  test_hitl.py  test_subagent_middleware.py
